test/integration/bad/op_intdivide_bad_1.stan
data {
  real a;
  real b;
}
transformed data {
  real c = a %/% b;
  real c = a %/% b;
}